--- a/app/src/main/res/layout/complemento_item_tv.xml
+++ b/app/src/main/res/layout/complemento_item_tv.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
-    android:layout_height="30dp">
+    android:layout_height="15dp">
 <LinearLayout
     android:layout_width="5dp"
     android:layout_height="5dp"
     android:background="@drawable/boval"
-    android:layout_marginLeft="45dp"
+    android:layout_marginLeft="15dp"
     android:gravity="center_vertical"
     android:layout_gravity="center_vertical"></LinearLayout>
     <TextView
@@ -14,6 +14,7 @@
         android:layout_height="fill_parent"
         android:layout_marginLeft="15dp"
         android:id="@+id/descriptionC"
+        android:textSize="12dp"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical"
         android:textColor="#000"
